feat: stay at java 8 and more feature it